fixed text overlapping issue

--- a/resume/assets/img/css/style.css
+++ b/resume/assets/img/css/style.css
@@ -246,7 +246,7 @@
     /*nested Grid*/
     #about{
       display:grid;
-      grid-template-columns: 250px 1fr auto;
+      /* grid-template-columns: 250px 1fr auto; */
       gap:2em;
       grid-template-areas:
         "bio details details"
@@ -255,6 +255,7 @@
   
       .bio{
        grid-area:bio;
+       position: relative;
      }
      .details{
        grid-area:details;
